--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>My 3W3D</title>
 </head>
-<h1 align="center"><font face="Bookman Old Style">My Three.js test </font></h1>
+<h1 align="center"><font face="Bookman Old Style">My 3W3D HomeWork </font></h1>
 <body>
 	<h2 align="center"><a href="HW0.html">HW0</a></h2>
 </body>
