--- a/HW1.html
+++ b/HW1.html
@@ -31,8 +31,12 @@
 
 <body>
 <div id="info">
-     press z for -- Earth_revolution/rotation and Moon_revolution/rotation<br/>
-	 press x for ++ Earth_revolution/rotation and Moon_revolution/rotation<br/>
+     Press Z for --orbitAngleEarth         Press C for --rotateAngleEarth<br/>
+	 Press X for ++orbitAngleEarth         Press V for ++rotateAngleEarth<br/>
+	 Press A for --orbitAngleMoon_speed    Press S for --rotateAngleMoon_speed<br/>
+	 Press D for ++orbitAngleMoon_speed    Press F for ++rotateAngleMoon_speed<br/>
+	 Press SPACE for Pause Music           Press P for Play Music<br/>
+	 Press J for Volume DOWN               Press K for Volume UP<br/>
 </div>
 <audio id="soundtrack">
 <source src="sounds/Phantom of the Opera- Lindsey Stirling.mp3" type='audio/mp3'>
@@ -44,18 +48,41 @@
 <script>
 
 var scene, renderer, camera;
-var angle = 0;
+var orbitAngleEarth = 0, orbitAngleMoon = 0;
+var rotateAngleEarth = 0, rotateAngleMoon = 0;
+var orbitAngleEarth_speed = 0.1, orbitAngleMoon_speed = 1.2;
+var	rotateAngleEarth_speed = 365, rotateAngleMoon_speed = 1;
 var clock = new THREE.Clock();
 var keyboard = new KeyboardState();
 var controls;
 var Sun, Earth, Moon;
-var rotation = 6;
 var soundtrack;
+var sceneBack, cameraBack;
 init();
 animate();
 
 function init()
 {
+	/////////////////////////////////////////////
+    sceneBack = new THREE.Scene();
+    cameraBack = new THREE.OrthographicCamera(-10, 10, 10, -10, 1, 100);
+    cameraBack.position.z = 5;
+    cameraBack.lookAt(new THREE.Vector3(0, 0, 0));
+
+    THREE.ImageUtils.crossOrigin = '';
+    var texture = THREE.ImageUtils.loadTexture('images/GalaxyTexture.png');
+
+    var back = new THREE.Mesh(new THREE.PlaneGeometry(20, 20),
+    new THREE.MeshBasicMaterial({
+        map: texture,
+        transparent: true,
+        opacity: 0.315
+    }));
+    back.material.depthTest = false;
+    back.material.depthWrite = false;
+    sceneBack.add(back);
+
+    ////////////////////////////////////////////////  
 	//Renderer
 	renderer = new THREE.WebGLRenderer( {antialias:true} );
 	var width = window.innerWidth;
@@ -108,15 +135,15 @@ function init()
 	Earth.add( Moon );
 	
 	//Grid
-	var gridXZ = new THREE.GridHelper(150, 10);
-	gridXZ.setColors( new THREE.Color(0xff0000), new THREE.Color(0xffffff) );
-	scene.add(gridXZ);
+	//var gridXZ = new THREE.GridHelper(150, 10);
+	//gridXZ.setColors( new THREE.Color(0xff0000), new THREE.Color(0xffffff) );
+	//scene.add(gridXZ);
 	
 	//PointLight
 	var pointLight = new THREE.PointLight (0xffffff);
 	pointLight.position.set (0,300,200);
 	scene.add (pointLight);
-	
+	renderer.autoClear = false;
 	window.addEventListener ('resize', onWindowResize, false);
 }
 
@@ -137,30 +164,52 @@ function animate()
 
 function render()
 {	
-	angle += rotation*clock.getDelta()/180*3.1416;
-	Earth.position.set( 100*Math.cos(angle), 0, -100*Math.sin(angle));
-	Earth.rotation.y = angle;
+	orbitAngleEarth += orbitAngleEarth_speed/180*3.1416;
+	rotateAngleEarth = rotateAngleEarth_speed*orbitAngleEarth;
+	Earth.position.set( 100*Math.cos(orbitAngleEarth), 0, -100*Math.sin(orbitAngleEarth));
+	Earth.rotation.y = rotateAngleEarth;
 	
-	Moon.position.set( 30*Math.cos(angle*12), 0, -30*Math.sin(angle*12));
-	Moon.rotation.y = angle;
-	//console.log(Earth.position.x, Earth.position.y, Earth.position.z);
-	renderer.render (scene, camera);
+	orbitAngleMoon += orbitAngleMoon_speed/180*3.1416;
+	rotateAngleMoon = rotateAngleMoon_speed*orbitAngleMoon;
+	Moon.position.set( 30*Math.cos(orbitAngleMoon - rotateAngleEarth), 0, -30*Math.sin(orbitAngleMoon - rotateAngleEarth));
+	Moon.rotation.y = rotateAngleMoon - rotateAngleEarth;
+	renderer.render(sceneBack, cameraBack);
+	renderer.render(scene, camera);
 }
 
 function update()
 {
 	//controls.update();
 	keyboard.update();         // this is required; this is a different keyboard callback
-	if (rotation == 0 ){
-		rotation += 1;
-	}
-	
-	if (keyboard.down("Z") || keyboard.down("Z"))
-		rotation--;
+
+	if (keyboard.down("Z") || keyboard.down("Z")) 
+		orbitAngleEarth_speed -= 0.05;
 	if (keyboard.down("x") || keyboard.down("X"))
-		rotation++;
-		console.log(rotation);
+		orbitAngleEarth_speed += 0.05;
+	if (keyboard.down("a") || keyboard.down("A"))
+		orbitAngleMoon_speed -= 0.05;
+	if (keyboard.down("s") || keyboard.down("S"))
+		orbitAngleMoon_speed += 0.05;
+	if (keyboard.down("c") || keyboard.down("C"))
+		rotateAngleEarth_speed -= 10;
+	if (keyboard.down("v") || keyboard.down("V"))
+		rotateAngleEarth_speed += 10;	
+	if (keyboard.down("d") || keyboard.down("D"))
+		rotateAngleMoon_speed -= 0.05;
+	if (keyboard.down("f") || keyboard.down("F"))
+		rotateAngleMoon_speed += 0.05;
+	if (keyboard.down("space"))
+		soundtrack.pause();
+	if (keyboard.down("p") || keyboard.down("P"))
+		soundtrack.play();
+	if (keyboard.down("k") || keyboard.down("K"))
+		soundtrack.volume += 0.05;
+	if (keyboard.down("j") || keyboard.down("J"))
+		soundtrack.volume -= 0.05;
 }
+
+//var orbitAngleEarth_speed = 0.1, orbitAngleMoon_speed = 1.2;
+//var	rotateAngleEarth_speed = 365, rotateAngleMoon_speed = 1;
 </script>
 </body>
 
