--- a/HW1.html
+++ b/HW1.html
@@ -52,6 +52,7 @@ var orbitAngleEarth = 0, orbitAngleMoon = 0;
 var rotateAngleEarth = 0, rotateAngleMoon = 0;
 var orbitAngleEarth_speed = 0.1, orbitAngleMoon_speed = 1.2;
 var	rotateAngleEarth_speed = 365, rotateAngleMoon_speed = 1;
+var rotateAngleSun = 0;
 var clock = new THREE.Clock();
 var keyboard = new KeyboardState();
 var controls;
@@ -63,6 +64,7 @@ animate();
 
 function init()
 {
+	
 	/////////////////////////////////////////////
     sceneBack = new THREE.Scene();
     cameraBack = new THREE.OrthographicCamera(-10, 10, 10, -10, 1, 100);
@@ -84,10 +86,15 @@ function init()
 
     ////////////////////////////////////////////////  
 	//Renderer
+	
+	
+	
 	renderer = new THREE.WebGLRenderer( {antialias:true} );
 	var width = window.innerWidth;
 	var height = window.innerHeight;
 	renderer.setSize (width, height);
+	renderer.shadowMapEnabled = true;
+	renderer.shadowMapSoft = true;
 	renderer.setClearColor (0x888888);
 	
 	document.body.appendChild (renderer.domElement);
@@ -103,16 +110,6 @@ function init()
 	
 	controls = new THREE.OrbitControls (camera, renderer.domElement);
 	
-	// FLOOR
-	var floorTexture = new THREE.ImageUtils.loadTexture( 'images/44630529.jpg' );
-	floorTexture.wrapS = floorTexture.wrapT = THREE.RepeatWrapping; 
-	var floorMaterial = new THREE.MeshBasicMaterial( { map: floorTexture, side: THREE.DoubleSide } );
-	var floorGeometry = new THREE.PlaneGeometry(300, 300);//, 10, 10);  // not clear what segment does
-	var floor = new THREE.Mesh(floorGeometry, floorMaterial);
-	floor.position.y = -0.5;
-	floor.rotation.x = Math.PI / 2;
-	//scene.add(floor);
-	
 	//Sun 695500KM
 	var SunGeom =  new THREE.SphereGeometry( 50, 32, 16 );
 	var SunTexture = new THREE.ImageUtils.loadTexture( 'images/SunTexture.png' );
@@ -123,26 +120,22 @@ function init()
 	//Earth 6378
 	var EarthGeom =  new THREE.SphereGeometry( 10, 32, 16 );
 	var EarthTexture = new THREE.ImageUtils.loadTexture( 'images/EarthTexture.png' );
-	var EarthMaterial = new THREE.MeshBasicMaterial( { map : EarthTexture, color: 0xffffff, wireframe: false, transparent: true } ); 
+	var EarthMaterial = new THREE.MeshLambertMaterial( { map : EarthTexture, color: 0xffffff, wireframe: false, transparent: true } ); 
 	Earth = new THREE.Mesh( EarthGeom, EarthMaterial );
 	Sun.add( Earth );
 	
 	//Moon 1738
 	var MoonGeom =  new THREE.SphereGeometry( 5, 32, 16 );
 	var MoonTexture = new THREE.ImageUtils.loadTexture( 'images/MoonTexture.png' );
-	var MoonMaterial = new THREE.MeshBasicMaterial( { map : MoonTexture, color: 0xffffff, wireframe: false, transparent: true } ); 
+	var MoonMaterial = new THREE.MeshLambertMaterial( { map : MoonTexture, color: 0xffffff, wireframe: false, transparent: true } ); 
 	Moon = new THREE.Mesh( MoonGeom.clone(), MoonMaterial );
 	Earth.add( Moon );
 	
-	//Grid
-	//var gridXZ = new THREE.GridHelper(150, 10);
-	//gridXZ.setColors( new THREE.Color(0xff0000), new THREE.Color(0xffffff) );
-	//scene.add(gridXZ);
-	
 	//PointLight
-	var pointLight = new THREE.PointLight (0xffffff);
-	pointLight.position.set (0,300,200);
+	var pointLight = new THREE.PointLight (0xffffff, 1, 1000);
+	pointLight.position.set (0,0,0);
 	scene.add (pointLight);
+	
 	renderer.autoClear = false;
 	window.addEventListener ('resize', onWindowResize, false);
 }
@@ -164,6 +157,9 @@ function animate()
 
 function render()
 {	
+	rotateAngleSun += 1/180*3.1416;
+	Sun.rotation.y = rotateAngleSun;
+	
 	orbitAngleEarth += orbitAngleEarth_speed/180*3.1416;
 	rotateAngleEarth = rotateAngleEarth_speed*orbitAngleEarth;
 	Earth.position.set( 100*Math.cos(orbitAngleEarth), 0, -100*Math.sin(orbitAngleEarth));
@@ -179,7 +175,7 @@ function render()
 
 function update()
 {
-	//controls.update();
+	controls.update();
 	keyboard.update();         // this is required; this is a different keyboard callback
 
 	if (keyboard.down("Z") || keyboard.down("Z")) 
@@ -208,8 +204,6 @@ function update()
 		soundtrack.volume -= 0.05;
 }
 
-//var orbitAngleEarth_speed = 0.1, orbitAngleMoon_speed = 1.2;
-//var	rotateAngleEarth_speed = 365, rotateAngleMoon_speed = 1;
 </script>
 </body>
 
