--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
 </head>
 <h1 align="center"><font face="Bookman Old Style">My 3W3D HomeWork </font></h1>
 <body>
-	<h2 align="center"><a href="HW0.html">HW0</a></h2>
-	<h2 align="center"><a href="HW1.html">HW1</a></h2>
+	<table border="1" align="center">
+		<tr>
+			<td><img border="0" src="images/HW0.gif" width="380" height="190"></td>
+			<td><img border="0" src="images/HW1.gif" width="380" height="190"></td>
+			<td><img border="0" src="images/working.gif" width="380" height="190"></td>
+		</tr>
+		<tr>
+			<td width="380"><p align="center"><a href="HW0.html">HW0</a></p></td>
+			<td width="380"><p align="center"><a href="HW1.html">HW1</a></p></td>
+			<td width="380"><p align="center"><a href="HW2.html">HW2</a></p></td>
+		</tr>
+	</table>
 </body>
 
 </html>
