--- a/HW2.html
+++ b/HW2.html
@@ -212,11 +212,13 @@ function render()
 		{
 			pivot_1.rotation.y == 2.4;
 			open_soundtrack.pause();
+			open_soundtrack.load();
 		}
 		else
 		{
 			pivot_1.rotation.y += 0.02;
 			close_soundtrack.pause();
+			close_soundtrack.load();
 			open_soundtrack.play();
 		}
 	}
@@ -225,11 +227,13 @@ function render()
 		{
 			pivot_1.rotation.y == 0;
 			close_soundtrack.pause();
+			close_soundtrack.load();
 		}
 		else
 		{
 			pivot_1.rotation.y -= 0.015;
 			open_soundtrack.pause();
+			open_soundtrack.load();
 			close_soundtrack.play();
 		}
 	}
