--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<tr>
 			<td><img border="0" src="images/HW0.gif" width="380" height="190"></td>
 			<td><img border="0" src="images/HW1.gif" width="380" height="190"></td>
-			<td><img border="0" src="images/working.gif" width="380" height="190"></td>
+			<td><img border="0" src="images/HW2.gif" width="380" height="190"></td>
 		</tr>
 		<tr>
 			<td width="380"><p align="center"><a href="HW0.html">HW0</a></p></td>
