--- a/HW3.html
+++ b/HW3.html
@@ -42,9 +42,9 @@
 
     }
 </script>
-<script src="js/three.min.js"></script>
-<script src="js/OrbitControls.js"></script>
-<script src="js/KeyboardState.js"></script>
+<script src="http://je0606ff.github.io/3W3D/js/r70/three.min.js"></script>
+<script src="http://je0606ff.github.io/3W3D/js/OrbitControls.js"></script>
+<script src="http://je0606ff.github.io/3W3D/js/KeyboardState.js"></script>
 
 <script>
 var clock = new THREE.Clock();
@@ -76,12 +76,12 @@ function init()
 	
 	//texture
 	THREE.ImageUtils.crossOrigin = '';
-    var tire_side_texture = THREE.ImageUtils.loadTexture('images/tire_side.png');
-	var tire_side_texture_bump = THREE.ImageUtils.loadTexture('images/tire_side_bump.png');
-    var tire_wheel_texture = THREE.ImageUtils.loadTexture('images/tire_wheel.jpg');
-	var tire_wheel_texture_bump = THREE.ImageUtils.loadTexture('images/tire_wheel_bump.jpg');
-	var floor = THREE.ImageUtils.loadTexture('images/FloorTexture.jpg');
-	var floor_bump = THREE.ImageUtils.loadTexture('images/FloorTexture_bump.jpg');
+    var tire_side_texture = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/tire_side.png');
+	var tire_side_texture_bump = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/tire_side_bump.png');
+    var tire_wheel_texture = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/tire_wheel.jpg');
+	var tire_wheel_texture_bump = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/tire_wheel_bump.jpg');
+	var floor = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/FloorTexture.jpg');
+	var floor_bump = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/FloorTexture_bump.jpg');
 	//Object3D
     tire_left = new THREE.Object3D();
 	wheel = new THREE.Object3D();
