--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 			<td width="380"><p align="center"><a href="HW1.html">HW1</a></p></td>
 			<td width="380"><p align="center"><a href="HW2.html">HW2</a></p></td>
 		</tr>
+		<tr>
+			<td><img border="0" src="images/HW3.gif" width="380" height="190"></td>
+		</tr>
+		<tr>
+			<td width="380"><p align="center"><a href="HW3.html">HW3</a></p></td>
+		</tr>
 	</table>
 </body>
 
