--- a/HW2.html
+++ b/HW2.html
@@ -31,14 +31,14 @@
 
 
 
-<script src="js/r69/three.min.js"></script>
-<script src="js/OrbitControls.js"></script>
-<script src="js/KeyboardState.js"></script>
+<script src="http://je0606ff.github.io/3W3D/js/r69/three.min.js"></script>
+<script src="http://je0606ff.github.io/3W3D/js/OrbitControls.js"></script>
+<script src="http://je0606ff.github.io/3W3D/js/KeyboardState.js"></script>
 <audio id="open_soundtrack">
-<source src="sounds/open.mp3" type='audio/mp3' loop="false">
+<source src="http://je0606ff.github.io/3W3D/sounds/open.mp3" type='audio/mp3' loop="false">
 </audio>
 <audio id="close_soundtrack">
-<source src="sounds/close.mp3" type='audio/mp3' loop="false">
+<source src="http://je0606ff.github.io/3W3D/sounds/close.mp3" type='audio/mp3' loop="false">
 </audio>
 <script>
 
@@ -84,8 +84,8 @@ function init()
 	frame = new THREE.Object3D();
     scene.add(frame);
 	
-	var texture = THREE.ImageUtils.loadTexture('images/WoodTexture.jpg');
-    var bumptex = THREE.ImageUtils.loadTexture('images/WoodTexture_bump.jpg');
+	var texture = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/WoodTexture.jpg');
+    var bumptex = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/WoodTexture_bump.jpg');
 	
 	
 	
