--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <body>
 	<table border="1" align="center">
 		<tr>
-			<td><img border="0" src="images/HW0.gif" width="380" height="190"></td>
-			<td><img border="0" src="images/HW1.gif" width="380" height="190"></td>
-			<td><img border="0" src="images/HW2.gif" width="380" height="190"></td>
+			<td><img border="0" src="http://je0606ff.github.io/3W3D/images/HW0.gif" width="380" height="190"></td>
+			<td><img border="0" src="http://je0606ff.github.io/3W3D/images/HW1.gif" width="380" height="190"></td>
+			<td><img border="0" src="http://je0606ff.github.io/3W3D/images/HW2.gif" width="380" height="190"></td>
 		</tr>
 		<tr>
-			<td width="380"><p align="center"><a href="HW0.html">HW0</a></p></td>
-			<td width="380"><p align="center"><a href="HW1.html">HW1</a></p></td>
-			<td width="380"><p align="center"><a href="HW2.html">HW2</a></p></td>
+			<td width="380"><p align="center"><a href="http://je0606ff.github.io/3W3D/HW0.html">HW0</a></p></td>
+			<td width="380"><p align="center"><a href="http://je0606ff.github.io/3W3D/HW1.html">HW1</a></p></td>
+			<td width="380"><p align="center"><a href="http://je0606ff.github.io/3W3D/HW2.html">HW2</a></p></td>
 		</tr>
 		<tr>
 			<td><img border="0" src="images/HW3.gif" width="380" height="190"></td>
