20150405 HW3 fix link

--- a/HW3.html
+++ b/HW3.html
@@ -99,17 +99,10 @@ function init()
 	
 	//texture
 	THREE.ImageUtils.crossOrigin = '';
-    //var tire_side_texture = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/tire_side.png');
-	//var tire_side_texture_bump = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/tire_side_bump.png');
-    //var tire_wheel_texture = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/tire_wheel.jpg');
-	//var tire_wheel_texture_bump = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/tire_wheel_bump.jpg');
-	//var floor = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/FloorTexture.jpg');
-	//var floor_bump = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/FloorTexture_bump.jpg');
-	
-	var tire_side_texture = THREE.ImageUtils.loadTexture('images/tire_side.png');
-	var tire_side_texture_bump = THREE.ImageUtils.loadTexture('/images/tire_side_bump.png');
-    var tire_wheel_texture = THREE.ImageUtils.loadTexture('images/tire_wheel.jpg');
-	var tire_wheel_texture_bump = THREE.ImageUtils.loadTexture('images/tire_wheel_bump.jpg');
+    var tire_side_texture = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/tire_side.png');
+	var tire_side_texture_bump = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/tire_side_bump.png');
+    var tire_wheel_texture = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/tire_wheel.jpg');
+	var tire_wheel_texture_bump = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/tire_wheel_bump.jpg');
 	var floor = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/FloorTexture.jpg');
 	var floor_bump = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/FloorTexture_bump.jpg');
 	
