--- a/HW4.html
+++ b/HW4.html
@@ -16,7 +16,7 @@
 		font-size: 40px;
 		width: 100%;
 		text-align: center;
-		color: #00ff00;
+		color: #00ffff;
 	}
 	#toggle {
 		position: absolute;
