--- a/HW5.html
+++ b/HW5.html
@@ -36,17 +36,17 @@
 
 <body>
 
-<h1> Lipsum Generator </h1>
+<h1> HW5 I3B02 </h1>
 
 <hr>
 	<div id="container"><div id="cnvsFrame">
 		<canvas id="cnvs"> </canvas>
 	</div></div>
 	
-	<img src="images/00.jpg" class="flc" onclick="javascript:tst(1);" />
-	<img src="images/01.jpg" class="flc" onclick="javascript:tst(2);" />
-	<img src="images/02.jpg" class="flc" onclick="javascript:tst(3);" />
-	<img src="images/03.jpg" class="flc" onclick="javascript:tst(4);" />
+	<img src="http://je0606ff.github.io/3W3D/images/00.jpg" class="flc" onclick="javascript:tst(1);" />
+	<img src="http://je0606ff.github.io/3W3D/images/01.jpg" class="flc" onclick="javascript:tst(2);" />
+	<img src="http://je0606ff.github.io/3W3D/images/02.jpg" class="flc" onclick="javascript:tst(3);" />
+	<img src="http://je0606ff.github.io/3W3D/images/03.jpg" class="flc" onclick="javascript:tst(4);" />
 	
 	<div style="clear:both"></div>
 	
@@ -247,10 +247,10 @@ function init() {
     ////////////////////////////////////////////////////////////////////////////////////////////
 	
     THREE.ImageUtils.crossOrigin = '';
-    tex1 = THREE.ImageUtils.loadTexture("images/00.jpg");
-    tex2 = THREE.ImageUtils.loadTexture("images/01.jpg");
-	tex3 = THREE.ImageUtils.loadTexture("images/02.jpg");
-    tex4 = THREE.ImageUtils.loadTexture("images/03.jpg");
+    tex1 = THREE.ImageUtils.loadTexture("http://je0606ff.github.io/3W3D/images/00.jpg");
+    tex2 = THREE.ImageUtils.loadTexture("http://je0606ff.github.io/3W3D/images/01.jpg");
+	tex3 = THREE.ImageUtils.loadTexture("http://je0606ff.github.io/3W3D/images/02.jpg");
+    tex4 = THREE.ImageUtils.loadTexture("http://je0606ff.github.io/3W3D/images/03.jpg");
 	var floor = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/FloorTexture.jpg');
 	var floor_bump = THREE.ImageUtils.loadTexture('http://je0606ff.github.io/3W3D/images/FloorTexture_bump.jpg');
 	
