--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 		<tr>
 			<td><img border="0" src="http://je0606ff.github.io/3W3D/images/HW3.gif" width="380" height="190"></td>
 			<td><img border="0" src="http://je0606ff.github.io/3W3D/images/HW4.gif" width="380" height="190"></td>
+			<td><img border="0" src="http://je0606ff.github.io/3W3D/images/HW5.gif" width="380" height="190"></td>
 		</tr>
 		<tr>
 			<td width="380"><p align="center"><a href="http://je0606ff.github.io/3W3D/HW3.html">HW3</a></p></td>
 			<td width="380"><p align="center"><a href="http://je0606ff.github.io/3W3D/HW4.html">HW4</a></p></td>
+			<td width="380"><p align="center"><a href="http://je0606ff.github.io/3W3D/HW5.html">HW5</a></p></td>
 		</tr>
 	</table>
 </body>
