--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 			<td width="380"><p align="center"><a href="http://je0606ff.github.io/3W3D/HW4.html">HW4</a></p></td>
 			<td width="380"><p align="center"><a href="http://je0606ff.github.io/3W3D/HW5.html">HW5</a></p></td>
 		</tr>
+		<tr>
+			<td><img border="0" src="http://je0606ff.github.io/3W3D/images/HW6_0.gif" width="380" height="190"></td>
+			<td><img border="0" src="http://je0606ff.github.io/3W3D/images/HW6_1.gif" width="380" height="190"></td>
+		</tr>
+		<tr>
+			<td width="380"><p align="center"><a href="http://je0606ff.github.io/3W3D/HW6_0.html">HW6_0(Render to texture)</a></p></td>
+			<td width="380"><p align="center"><a href="http://je0606ff.github.io/3W3D/HW6_1.html">HW6_1(model)</a></p></td>
+		</tr>
 	</table>
 </body>
 
