--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
 		<tr>
 			<td><img border="0" src="http://je0606ff.github.io/3W3D/images/HW6_0.gif" width="380" height="190"></td>
 			<td><img border="0" src="http://je0606ff.github.io/3W3D/images/HW6_1.gif" width="380" height="190"></td>
+			<td><img border="0" src="http://je0606ff.github.io/3W3D/images/HW7.gif" width="380" height="190"></td>
 		</tr>
 		<tr>
 			<td width="380"><p align="center"><a href="http://je0606ff.github.io/3W3D/HW6_0.html">HW6_0(Render to texture)</a></p></td>
 			<td width="380"><p align="center"><a href="http://je0606ff.github.io/3W3D/HW6_1.html">HW6_1(model)</a></p></td>
+			<td width="380"><p align="center"><a href="http://je0606ff.github.io/3W3D/HW7.html">HW7</a></p></td>
 		</tr>
 	</table>
 </body>
